# urirun-connector-vql

./: README.md  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
scripts/: ci_urirun_llm_smoke.py
tests/: test_vql.py
urirun_connector_vql/: __init__.py  connector.manifest.json  core.py
urirun_connector_vql.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
